--- a/IoTCampTpm/IoTCampTpm.csproj
+++ b/IoTCampTpm/IoTCampTpm.csproj
@@ -11,8 +11,8 @@
     <AssemblyName>IoTCampTpm</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
-    <TargetPlatformVersion>10.0.15063.0</TargetPlatformVersion>
-    <TargetPlatformMinVersion>10.0.10586.0</TargetPlatformMinVersion>
+    <TargetPlatformVersion>10.0.16299.0</TargetPlatformVersion>
+    <TargetPlatformMinVersion>10.0.16299.0</TargetPlatformMinVersion>
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <EnableDotNetNativeCompatibleProfile>true</EnableDotNetNativeCompatibleProfile>
     <FileAlignment>512</FileAlignment>
@@ -95,6 +95,7 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="ConvertTemp.cs" />
     <Compile Include="StartupTask.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -129,17 +130,20 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="GrovePi">
+      <Version>1.0.10</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.Azure.Devices.Client">
-      <Version>1.4.1</Version>
+      <Version>1.6.1</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Azure.Devices.Shared">
-      <Version>1.1.0</Version>
+      <Version>1.4.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Devices.Tpm">
       <Version>1.0.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
-      <Version>5.4.0</Version>
+      <Version>6.0.6</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>10.0.3</Version>
